more engine tweaks